--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.5.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "29.5.13",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
